fix: remove overflow: auto from html tag

--- a/migration-to-ts/src/global.scss
+++ b/migration-to-ts/src/global.scss
@@ -6,10 +6,6 @@ $scrollbar-color: #555;
   box-sizing: border-box;
 }
 
-html {
-    overflow: auto;
-}
-
 body {
     color: $color-secondary;
     background: #17181c;
